[project]
name = "python-testing"
version = "0.1.0"
description = "project for python handson"
authors = [
    {name = "kps",email = "kpsingh2607@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]
[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
[tool.poetry]
packages = [{include = "python_testing", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
